2025-05-25 [1.42 Bld 288]

- Bugfix      : 68K: correct encoding of DIVS.L/DIVU.L
                with 32-bit dest operand
- Bugfix      : 68K: regard possible zero-length base
                displacement for PC-relative addressing.
- Bugfix      : 68K: preindexing must be used for indirect
                addressing if index register is suppressed.
- Addition    : Display values unknown in first pass as
                question marks for 8048, 8051, TMDS370, AVR,
                and 8086/V20...V55.

2025-05-21 [1.42 Bld 287]

- Bugfix      : Z380: correct encoding of 'add hl,(abs)'
- Bugfix      : Z380: correct encoding of 'ld (sp+disp),r16'
- Bugfix      : Z380: permit 24/32 bit operand for
                'add/sub sp,nnnn'
- Bugfix      : PALM: correct implementation of JMP
                with absolute argument
- Bugfix      : 68K: correct encoding of BFCHG/BFSET/BFCLR
- Bugfix      : 68K: correct encoding of MULS.L/MULU.L
- Bugfix      : 68K: correct list of addressing modes for PMOVE <reg>,<ea>
- Bugfix      : 68K: correct PMMU condition encoding
- Bugfix      : 68K: correct offset for PC-relative addressing of PRESTORE
- Bugfix      : 68K: correct allowed addressing modes for PRESTORE
- Bugfix      : 68K: correct operand size handling for PFLUSHR
- Change      : Z380: make DDIR prefix handling more flexible

2025-04-28 [1.42 Bld 286]

- Bugfix      : Correct checksum computation for MOS Hex
                format.
- Bugfix      : Correct encoding of CPU16 BCLRW, BSETW,
                MOVW, and MOVB instructions.
- Bugfix      : Correct range of offsets for CPU16
                MAC/RMAC instructions.

2025-04-26 [1.42 Bld 285]

- Addition    : Display values unknown in first pass as
                question marks for MCS-48 and AVR.
- Bugfix      : Revert RADIX and OUTRADIX to the documented
                behaviour, i.e. expecting a plain number in
                preferrably decimal, rather than an expression
                in the current radix.