@@ -49,7 +49,7 @@
 
 \vspace{1cm}\par
 
-{\large Stand Mai 2025}
+{\large Stand Juni 2025}
 \end{raggedright}
 
 \clearpage
