@@ -67,7 +67,7 @@
 
 \vspace{1cm}\par
 
-{\large Edition May 2025}
+{\large Edition June 2025}
 \end{raggedright}
 
 \clearpage
